doc/user: one more minor spacing fix

--- a/doc/user/assets/sass/_content.scss
+++ b/doc/user/assets/sass/_content.scss
@@ -73,6 +73,7 @@ a {
   ol p,
   p + ol,
   p + ol.has-p,
+  ol + p,
   .highlight + p,
   pre + p,
   table + p {
@@ -137,7 +138,7 @@ a {
     color: $off-black;
     font-family: Courier, monospace;
     font-size: 15px;
-    margin: 16px 0 4px;
+    margin: 16px 0 8px;
     overflow: auto;
     padding: 10px;
 
@@ -157,7 +158,7 @@ a {
   // shell or SQL snippet followed by its (unhighlighted) output.
   .highlight + pre {
     border-top: 0;
-    margin-top: -20px;
+    margin-top: -12px;
     padding-top: 0;
   }
 
